--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #333;
     }
     header {
-      background-color: #ff6b6b;
+      background-color: #29d91c;
       color: white;
       text-align: center;
       padding: 1rem;
@@ -103,7 +103,7 @@
     <div class="prato">
       <img src="https://via.placeholder.com/200x150.png?text=Hamburguer" alt="Hamburguer">
       <h3>Hamburguer</h3>
-      <p>R$ 20,00</p>
+      <p>R$ 60,00</p>
       <button onclick="adicionarPedido('Hamburguer', 20)">Adicionar ao Pedido</button>
     </div>
     <div class="prato">
