--- a/contato.html
+++ b/contato.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dolce & Pane - Home</title>
+  <title>Dolce & Pane - Contato</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Dolce & Pane</h1>
-    <p>Peça sua comida favorita sem sair de casa!</p>
+    <h1>Contato - Dolce & Pane</h1>
   </header>
 
   <nav>
@@ -19,9 +18,9 @@
     <a href="contato.html">Contato</a>
   </nav>
 
-  <section style="text-align:center; padding:2rem;">
-    <h2>Bem-vindo(a)!</h2>
-    <p>Explore nosso cardápio e faça seu pedido online.</p>
+  <section style="text-align:center; padding: 1rem;">
+    <p>WhatsApp: <a href="https://wa.me/5511999999999" target="_blank">Clique aqui</a></p>
+    <p>Endereço: Rua Exemplo, 123 - Cidade</p>
   </section>
 
   <footer>
