--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dolce & Pane - Home</title>
+  <title>Dolce & Pane</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>Dolce & Pane</h1>
-    <p>Peça sua comida favorita sem sair de casa!</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="cardapio.html">Cardápio</a>
+      <a href="pedido.html">Meu Pedido</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="cardapio.html">Cardápio</a>
-    <a href="pedido.html">Fazer Pedido</a>
-    <a href="contato.html">Contato</a>
-  </nav>
-
-  <section style="text-align:center; padding:2rem;">
-    <h2>Bem-vindo(a)!</h2>
-    <p>Explore nosso cardápio e faça seu pedido online.</p>
-  </section>
+  <main>
+    <h2>Bem-vindo à Dolce & Pane</h2>
+    <p>O sabor que adoça os seus melhores momentos ✨</p>
+  </main>
 
   <footer>
-    <p>© 2025 Dolce & Pane</p>
+    <p>&copy; 2025 Dolce & Pane</p>
   </footer>
 </body>
 </html>
