--- a/contato.html
+++ b/contato.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dolce & Pane - Contato</title>
+  <title>Contato - Dolce & Pane</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Contato - Dolce & Pane</h1>
+    <h1>🍰 Dolce & Pane</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="cardapio.html">Cardápio</a>
+      <a href="bolo.html">Monte seu Bolo</a>
+      <a href="pedido.html">Pedido</a>
+      <a href="contato.html">Contato</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="cardapio.html">Cardápio</a>
-    <a href="pedido.html">Fazer Pedido</a>
-    <a href="contato.html">Contato</a>
-  </nav>
-
-  <section style="text-align:center; padding: 1rem;">
-    <p>WhatsApp: <a href="https://wa.me/5511999999999" target="_blank">Clique aqui</a></p>
-    <p>Endereço: Rua Exemplo, 123 - Cidade</p>
+  <section>
+    <div class="card">
+      <h2>Entre em Contato 💌</h2>
+      <p>📍 Endereço: Rua das Delícias, 123 - Cidade Doce</p>
+      <p>📞 Telefone: (43) 99999-9999</p>
+      <p>📱 WhatsApp: <a href="https://wa.me/5546988272109" target="_blank">Clique aqui</a></p>
+      <p>📧 E-mail: contato@dolceepane.com</p>
+    </div>
   </section>
 
   <footer>
