--- a/index.html
+++ b/index.html
@@ -2,26 +2,31 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dolce & Pane</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Dolce & Pane</h1>
+    <h1>🍰 Dolce & Pane</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="cardapio.html">Cardápio</a>
-      <a href="pedido.html">Meu Pedido</a>
+      <a href="bolo.html">Monte seu Bolo</a>
+      <a href="pedido.html">Pedido</a>
+      <a href="contato.html">Contato</a>
     </nav>
   </header>
 
-  <main>
-    <h2>Bem-vindo à Dolce & Pane</h2>
-    <p>O sabor que adoça os seus melhores momentos ✨</p>
-  </main>
+  <section>
+    <div class="card">
+      <h2>Bem-vindo(a) à Dolce & Pane!</h2>
+      <p>Doces, bolos e muito carinho em cada pedacinho 💕</p>
+    </div>
+  </section>
 
   <footer>
-    <p>&copy; 2025 Dolce & Pane</p>
+    <p>© 2025 Dolce & Pane</p>
   </footer>
 </body>
 </html>
