--- a/bolo.html
+++ b/bolo.html
@@ -1,109 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Monte seu Bolo - Dolce & Pane</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Monte seu Bolo - Dolce & Pane</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>🍰 Dolce & Pane</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="cardapio.html">Cardápio</a>
-      <a href="bolo.html">Monte seu Bolo</a>
-      <a href="pedido.html">Pedido</a>
-      <a href="contato.html">Contato</a>
-    </nav>
-  </header>
+<header>
+  <h1>Dolce & Pane</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="cardapio.html">Cardápio</a>
+    <a href="bolo.html">Monte seu Bolo</a>
+    <a href="pedido.html">Pedido</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
 
-  <section>
-    <div class="card">
-      <h2>Monte seu Bolo 🎂</h2>
-      <form id="boloForm">
-        <label>Massa:</label>
-        <select id="massa" required>
-          <option value="">Selecione</option>
-          <option>Baunilha</option>
-          <option>Chocolate</option>
-          <option>Pão de ló</option>
-          <option>Brownie</option>
-        </select>
+<section>
+  <div class="card">
+    <h2>Monte seu Bolo</h2>
+    <form id="boloForm">
 
-        <label>Recheio 1:</label>
-        <select id="recheio1" required>
-          <option value="">Selecione</option>
-          <option>Ganache de frutas vermelhas</option>
-          <option>Abacaxi com creme de leite ninho</option>
-          <option>Ninho com nutella</option>
-          <option>Brigadeiro</option>
-          <option>Brigadeiro de ninho</option>
-          <option>Nata com morango</option>
-          <option>Crocante de nozes com nata</option>
-          <option>Leite condensado cozido</option>
-          <option>Ameixa com leite condensado cozido</option>
-          <option>Maracujá</option>
-          <option>Limão siciliano</option>
-          <option>Kinder bueno</option>
-          <option>4 leites</option>
-          <option>Coco</option>
-        </select>
+      <h3>Escolha uma massa:</h3>
+      <label><input type="radio" name="massa" value="Baunilha" required> Baunilha</label>
+      <label><input type="radio" name="massa" value="Chocolate"> Chocolate</label>
+      <label><input type="radio" name="massa" value="Pão de ló"> Pão de ló</label>
+      <label><input type="radio" name="massa" value="Brownie"> Brownie</label>
 
-        <label>Recheio 2:</label>
-        <select id="recheio2" required>
-          <option value="">Selecione</option>
-          <option>Ganache de frutas vermelhas</option>
-          <option>Abacaxi com creme de leite ninho</option>
-          <option>Ninho com nutella</option>
-          <option>Brigadeiro</option>
-          <option>Brigadeiro de ninho</option>
-          <option>Nata com morango</option>
-          <option>Crocante de nozes com nata</option>
-          <option>Leite condensado cozido</option>
-          <option>Ameixa com leite condensado cozido</option>
-          <option>Maracujá</option>
-          <option>Limão siciliano</option>
-          <option>Kinder bueno</option>
-          <option>4 leites</option>
-          <option>Coco</option>
-        </select>
-
-        <label>Cobertura:</label>
-        <select id="cobertura" required>
-          <option value="">Selecione</option>
-          <option>Chantininho</option>
-          <option>Nata</option>
-          <option>Naked cake (com acetato)</option>
-          <option>Semi naked</option>
-          <option>Buttercream</option>
-        </select>
-
-        <button type="submit">Enviar Pedido pelo WhatsApp</button>
-      </form>
-    </div>
-  </section>
-
-  <footer>
-    <p>© 2025 Dolce & Pane</p>
-  </footer>
-
-  <script>
-    document.getElementById("boloForm").addEventListener("submit", function(event) {
-      event.preventDefault();
-
-      const massa = document.getElementById("massa").value;
-      const recheio1 = document.getElementById("recheio1").value;
-      const recheio2 = document.getElementById("recheio2").value;
-      const cobertura = document.getElementById("cobertura").value;
-
-      const msg = `🎂 Pedido de bolo personalizado:\n\n🍞 Massa: ${massa}\n🥥 Recheios: ${recheio1} + ${recheio2}\n🍫 Cobertura: ${cobertura}`;
-      
-      const phone = "5543999999999"; // <-- teu número
-      const url = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
-
-      window.open(url, "_blank");
-    });
-  </script>
-</body>
-</html>
+      <h3>Escolha até dois recheios:</h3>
+      <label><input type="checkbox" name="recheio" value="Ganache de frutas vermelhas"> Ganache de frutas vermelhas</label>
+      <label><input type="checkbox" name="recheio" value="Abacaxi com creme de leite ninho"> Abacaxi com creme de leite ninho</label>
+      <label><input type="checkbox" name="recheio" value="Ninho com Nutella"> Ninho com Nutella</label>
+      <label><input type="checkbox" name="recheio" value="Brigadeiro"> Brigadeiro</label>
+      <label><input type="checkbox" name="recheio" value="Brigadeiro de ninho"> Brigadeiro de ninho</label>
+      <label><input type="checkbox" name="recheio" value="Nata com morango"> Nata com morango</label>
+      <label><input type="checkbox" name="recheio" value="Crocante de nozes com nata"> Crocante de nozes com nata</label>
+      <label><input type="checkbox" name="recheio" value="Leite condensado cozido"> Leite condensado cozido</label>
+      <label><input type="checkbox" name="recheio" value="Ameixa com leite condensado cozido"> Ameixa com leite condensado cozido</label>
+      <label><input type="checkbox" name="recheio" value="Maracujá"> Maracujá</label>
+      <label><input type="checkbox" name="recheio" value="Limão siciliano"> Limão siciliano</label>
+      <label><input type="
