--- a/cardapio.html
+++ b/cardapio.html
@@ -1,37 +1,90 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cardápio - Dolce & Pane</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Cardápio - Dolce & Pane</title>
+<link rel="stylesheet" href="style.css">
+<style>
+  h2 { text-align: center; margin-bottom: 20px; color: #ff66b2; }
+  .menu-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 20px;
+    max-width: 1000px;
+    margin: auto;
+  }
+  .menu-card {
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    padding: 15px;
+    text-align: center;
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+  .menu-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+  }
+  .menu-card img {
+    width: 100%;
+    border-radius: 12px;
+    margin-bottom: 10px;
+  }
+  .menu-card h3 {
+    margin: 10px 0 5px 0;
+    color: #ff66b2;
+  }
+  .menu-card p {
+    font-size: 0.9em;
+    color: #555;
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>🍰 Dolce & Pane</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="cardapio.html">Cardápio</a>
-      <a href="bolo.html">Monte seu Bolo</a>
-      <a href="pedido.html">Pedido</a>
-      <a href="contato.html">Contato</a>
-    </nav>
-  </header>
 
-  <section>
-    <div class="card">
-      <h2>Nosso Cardápio</h2>
-      <ul>
-        <li>🧁 Cupcakes variados</li>
-        <li>🍩 Donuts recheados</li>
-        <li>🍕 Pizzas doces</li>
-        <li>🎂 Bolos prontos</li>
-      </ul>
+<header>
+  <h1>Dolce & Pane</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="cardapio.html">Cardápio</a>
+    <a href="bolo.html">Monte seu Bolo</a>
+    <a href="pedido.html">Pedido</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
+
+<section>
+  <h2>Nosso Cardápio</h2>
+  <div class="menu-grid">
+    <div class="menu-card">
+      <img src="images/cupcake.jpg" alt="Cupcakes">
+      <h3>Cupcakes</h3>
+      <p>Doces fofinhos com diversos recheios e coberturas.</p>
     </div>
-  </section>
 
-  <footer>
-    <p>© 2025 Dolce & Pane</p>
-  </footer>
+    <div class="menu-card">
+      <img src="images/bolo.jpg" alt="Bolos">
+      <h3>Bolos</h3>
+      <p>Bolos prontos ou personalizados com sabores clássicos.</p>
+    </div>
+
+    <div class="menu-card">
+      <img src="images/donut.jpg" alt="Donuts">
+      <h3>Donuts</h3>
+      <p>Donuts recheados e cobertos com chocolate ou brigadeiro.</p>
+    </div>
+
+    <div class="menu-card">
+      <img src="images/torta.jpg" alt="Tortas">
+      <h3>Tortas</h3>
+      <p>Tortas doces e decoradas, perfeitas para qualquer ocasião.</p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <p>© 2025 Dolce & Pane</p>
+</footer>
 </body>
 </html>
