--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dolce & Pane</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dolce & Pane</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>🍰 Dolce & Pane</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="cardapio.html">Cardápio</a>
-      <a href="bolo.html">Monte seu Bolo</a>
-      <a href="pedido.html">Pedido</a>
-      <a href="contato.html">Contato</a>
-    </nav>
-  </header>
+<header>
+  <h1>Dolce & Pane</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="cardapio.html">Cardápio</a>
+    <a href="bolo.html">Monte seu Bolo</a>
+    <a href="pedido.html">Pedido</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
 
-  <section>
-    <div class="card">
-      <h2>Bem-vindo(a) à Dolce & Pane!</h2>
-      <p>Doces, bolos e muito carinho em cada pedacinho 💕</p>
-    </div>
-  </section>
+<section>
+  <div class="card">
+    <h2>Bem-vindo(a) à Dolce & Pane</h2>
+    <p>Doces, bolos e muito carinho em cada pedacinho.</p>
+  </div>
+</section>
 
-  <footer>
-    <p>© 2025 Dolce & Pane</p>
-  </footer>
+<footer>
+  <p>© 2025 Dolce & Pane</p>
+</footer>
 </body>
 </html>
