--- a/contato.html
+++ b/contato.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contato - Dolce & Pane</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contato - Dolce & Pane</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>🍰 Dolce & Pane</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="cardapio.html">Cardápio</a>
-      <a href="bolo.html">Monte seu Bolo</a>
-      <a href="pedido.html">Pedido</a>
-      <a href="contato.html">Contato</a>
-    </nav>
-  </header>
 
-  <section>
-    <div class="card">
-      <h2>Entre em Contato 💌</h2>
-      <p>📍 Endereço: Rua das Delícias, 123 - Cidade Doce</p>
-      <p>📞 Telefone: (43) 99999-9999</p>
-      <p>📱 WhatsApp: <a href="https://wa.me/5546988272109" target="_blank">Clique aqui</a></p>
-      <p>📧 E-mail: contato@dolceepane.com</p>
-    </div>
-  </section>
+<header>
+  <h1>Dolce & Pane</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="cardapio.html">Cardápio</a>
+    <a href="bolo.html">Monte seu Bolo</a>
+    <a href="pedido.html">Pedido</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
 
-  <footer>
-    <p>© 2025 Dolce & Pane</p>
-  </footer>
+<section>
+  <div class="card">
+    <h2>Entre em Contato</h2>
+    <p>Endereço: Rua das Delícias, 123 - Cidade Doce</p>
+    <p>Telefone: (46) 988272109</p>
+    <p>WhatsApp: <a href="https://wa.me/5546988272109" target="_blank">Clique aqui para enviar mensagem</a></p>
+    <p>E-mail: contato@dolceepane.com</p>
+  </div>
+</section>
+
+<footer>
+  <p>© 2025 Dolce & Pane</p>
+</footer>
+
 </body>
 </html>
